--- a/project.config
+++ b/project.config
@@ -6,10 +6,10 @@
 [access "refs/heads/*"]
 	label-Code-Review = -2..+2 group Android Maintainers
 	label-Verified = -1..+0 group Android Maintainers
+	create = group AOSP
 [access "refs/heads/master"]
 	label-Verified = -1..+1 group Android Maintainers
 	submit = group Android Maintainers
 [project]
-	state = active
 [access]
 	inheritFrom = Platform-Unrestricted-Projects
