--- a/project.config
+++ b/project.config
@@ -6,6 +6,9 @@
 [access "refs/heads/*"]
 	label-Code-Review = -2..+2 group Android Maintainers
 	label-Verified = -1..+0 group Android Maintainers
+[access "refs/heads/staging-master"]
+	label-Verified = -1..+1 group Android Maintainers
+	submit = group Android Maintainers
 [access "refs/heads/master"]
 	label-Verified = -1..+1 group Android Maintainers
 	submit = group Android Maintainers
